ME_4600/MESDK/ME-4000/VC/DLLInit.h


typedef   int(__cdecl *PF_ME4000AOSINGLESIMULTANEOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds, short* psValue);

typedef   int(__cdecl *PF_ME4000AOSTARTSYNCHRONOUS(unsigned int uiBoardNumber, unsigned int* puiChannelNumber, unsigned long ulCount, int iTriggerMode, int* piExtTriggerEnable, int* piExtTriggerEdge, unsigned long ulTimeOutSeconds);


int me4000MultiSigAOReset(
    unsigned int uiBoardNumber);


int me4000MultiSigAOGetStatus(
    unsigned int uiBoardNumber,
    int iWaitIdle,
    int* piStatus);


int me4000MultiSigAOClose(
    unsigned int uiBoardNumber);