ME_4600/MESDK/ME-4000/VBasic/ME4000.bas


Declare Function me4000MultiSigAOReset Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOReset@4" (ByVal lBoardNumber As Long) As Long

Declare Function me4000MultiSigAOGetStatus Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOGetStatus@12" (ByVal lBoardNumber As Long, ByVal lWaitIdle As Long, ByRef plStatus As Long) As Long

Declare Function me4000MultiSigAOClose Lib "me4000Ex.dll" Alias "_me4000VB_MultiSigAOClose@4" (ByVal lBoardNumber As Long) As Long





